fixed missing background for Google Calendar

--- a/src/styles/calendarPage.css
+++ b/src/styles/calendarPage.css
@@ -1,6 +1,7 @@
 /* Styles for the calendar page */
 .Calendar-Page {
     background-color: #FFE7D7;
+    background: url("../../public/built-background.png") center/cover no-repeat fixed;
     display: flex;
     flex-direction: column;
     flex:1;
